# rosneuro_filters

./: .gitignore  CMakeLists.txt  README.md  default_plugins.xml  package.xml  plugins_frequencyfilters.xml  plugins_spatialfilters.xml  plugins_windows.xml
example/: RunFilterChainNode.cpp
include/rosneuro_filters/: Blackman.hpp  Butterworth.h  Butterworth.hpp  Car.h  Car.hpp  Dc.h  Dc.hpp  Filter.h  Filter.hpp  FilterChain.h  FilterChain.hpp  FilterChainNode.h  Flattop.h  Flattop.hpp  Hamming.h  Hamming.hpp  Hann.h  Hann.hpp  Laplacian.h  Laplacian.hpp  Window.h  Window.hpp  rosneuro_filters_utilities.hpp
include/rosneuro_filters/old/: Blackman.h  Blackman.hpp  Flattop.hpp  Hann.hpp
old/: CMakeLists.txt  package.xml
src/: Blackman.cpp  Butterworth.cpp  Car.cpp  Dc.cpp  Filter.cpp  FilterChain.cpp  FilterChainNode.cpp  Flattop.cpp  Hamming.cpp  Hann.cpp  Laplacian.cpp  Window.cpp  filterchain_node.cpp
test/: .gitignore  TestFilter.cpp  TestFilterChain.cpp  TestFilterChainNode.cpp  blackman_window.cpp  blackman_window.launch  blackman_window.m  butterworth_simloop.cpp  butterworth_simloop.launch  butterworth_simloop.m  butterworth_simloop_chain.cpp  butterworth_simloop_chain.launch  butterworth_simloop_chain.m  butterworth_simloop_chain.yaml  butterworth_simloop_config.cpp  butterworth_simloop_config.launch  butterworth_simloop_config.m  butterworth_simloop_config.yaml  butterworth_simloop_configuration.cpp  butterworth_simloop_configuration.launch  butterworth_simloop_configuration.m  butterworth_simloop_outbp.csv  butterworth_simloop_outhp.csv  butterworth_simloop_outlp.csv  car_simloop_config.cpp  car_simloop_config.launch  car_simloop_config.m  car_simloop_config.yaml  dc_simloop_config.cpp  dc_simloop_config.launch  dc_simloop_config.m  dc_simloop_config.yaml  flattop_window.cpp  flattop_window.launch  flattop_window.m  hamming_window.cpp  hamming_window.launch  hamming_window.m  hann_window.cpp  hann_window.launch  (+23 more)
test/old/: test_bandpass_filter.cpp  test_bandpass_filter.launch  test_bandpass_filter_eigen.cpp  test_bandpass_filter_eigen.launch  test_blackman.launch  test_butterworth.cpp  test_butterworth.launch  test_butterworth.yaml  test_car.cpp  test_car.launch  test_chain.launch  test_dc.cpp  test_dc.launch  test_flattop.launch  test_hamming.cpp  test_hamming.launch  test_hamming.yaml  test_hann.cpp  test_hann.yaml  test_laplacian.cpp  test_laplacian.launch  test_rtfilter.cpp
