<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_filters</name>
  <version>1.5.0</version>
  <description>ROSNeuro filters package</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>eigen</depend>
  <depend>librtfilter</depend>
  <depend>roslib</depend>
  <depend>rosconsole</depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  
  <export>
    <rosneuro_filters plugin="${prefix}/plugins_spatialfilters.xml" />
    <rosneuro_filters plugin="${prefix}/plugins_frequencyfilters.xml" />
    <rosneuro_filters plugin="${prefix}/plugins_windows.xml" />
  </export>

</package>
