<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_filters</name>
  <version>2.1.1</version>
  <description>ROSNeuro filters package</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
  <depend>eigen</depend>
  <depend>roslib</depend>
  <depend>rosconsole</depend>
  <depend>rosneuro_msgs</depend>  
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
	  

</package>
